--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body{
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  justify-content: center;
 }
 .hamburger-menu {
   display: flex;
@@ -47,9 +48,6 @@ body{
   align-items: center;
   gap: 0.5rem;
   font-weight: 600;
-}
-.tech-link::before {
-  content: "Technologies";
 }
 .social-media-icons {
   display: flex;
@@ -169,9 +167,7 @@ body{
 .footer {
   margin-top: auto;
 }
-.tech__title::before {
-  content: "Tech Stack";
-}
+
 .tech__main img {
   width: 10rem;
   aspect-ratio: 1;
@@ -234,6 +230,7 @@ body{
   font-weight: 600;
 }
 .projects__title {
+  align-self: center;
   font-size: 3rem;
 }
 .project__subtitle {
@@ -253,9 +250,7 @@ body{
   font-weight: 600;
   margin-bottom: 2rem;
 }
-.contact__title::before {
-  content: "For any questions please drop a mail";
-}
+
 .contact__main h2 {
   font-size: 2.7rem;
   font-weight: 600;
@@ -293,7 +288,6 @@ body{
   0% { transform: translateX(-200vw); }
   100% { transform: translateX(-100vw); }
 }
-
 .slide-to-right { 
   animation: slideToRight 1s ease-in-out forwards; 
 }
@@ -303,10 +297,21 @@ body{
   100% { transform: translateX(100vw); }
 }
 
+.wave-animation {
+  transform-origin: bottom right;
+  display: inline-block;
+  animation: wave 0.6s infinite ease-in-out;
+}
 
+@keyframes wave {
+  0% { transform: rotate(0deg); }
+  50% { transform: rotate(10deg); }
+  100% { transform: rotate(0deg); }
+}
 
 main {
   display: flex;
+  overflow: hidden;
 }
 
 @media (min-width: 1600px) {
@@ -333,14 +338,12 @@ main {
     color: var(--dark-gray-color);
   }
 
-  .tech-link::before {
-    content: "Tech Stack";
-  }
   .header,
   .nav {
     flex-direction: row;
   }
   .header {
+    align-self: center;
     width: 75%;
     margin-top: 8rem;
     gap: 0;
@@ -406,9 +409,7 @@ main {
   .about__header {
     color: var(--lm-header-color);
   }
-  .tech__title::before {
-    content: "My Tech Stack";
-  }
+
   .tech__main img {
     width: 12rem;
     aspect-ratio: 1;
@@ -446,6 +447,7 @@ main {
     display: grid;
     grid-template-areas: "title title title" "text text text" "card card card" "card card card";
     column-gap: 4.5rem;
+    justify-content: center;
 }
   .projects__card {
     margin-left: auto;
@@ -512,9 +514,7 @@ main {
     color:var(--lm-header-color);
     font-size: 5.8rem;
   }
-  .contact__title::before {
-    content: "For any questions please mail us:";
-  }
+
   .contact__gray-text {
     display: none;
   }
