--- a/styles/style.css
+++ b/styles/style.css
@@ -4,19 +4,20 @@ body{
   display: flex;
   flex-direction: column;
   font-family: poppins;
+  height: 100vh;
 }
 .home,
 .about,
 .tech,
 .projects,
-.contact, 
-.new-content{
-  width: 89%;
-  height: 92%;
+.contact{ 
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  justify-content: center;
+  align-items: center;
+}
+.new-content {
+  height: unset;
 }
 .hamburger-menu {
   display: flex;
@@ -102,10 +103,15 @@ body{
 }
 .about__subsection {
   display: grid;
-  grid-template-areas: "header work-status" "place period" "position .";
+  grid-template-areas: "header work-status" "description description" "place period" "position .";
   grid-template-columns: 1fr auto;
   border-bottom: 2px solid var(--light-gray-color);
   padding: 2rem 0;
+}
+.subsection__work-description {
+  grid-area: description;
+  padding: 0.5rem 0;
+  text-wrap:wrap;
 }
 .subsection__place {
   grid-area: place;
@@ -159,13 +165,15 @@ body{
   display: none;
 }
 .about__section {
-  margin-top: 2rem;
+  margin: 2rem auto;
+  width: 90%;
 }
 .about__header {
   color: #000;
 }
 .footer {
   margin-top: auto;
+  margin-bottom: 0;
 }
 
 .tech__main img {
@@ -188,8 +196,8 @@ body{
   color: var(--dark-gray-color);
 }
 .projects__card {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 1rem;
+  margin-right: 1rem;
   border-radius: 2.5rem;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -262,7 +270,7 @@ body{
 }
 
 .slide-from-right { 
-  animation: slideFromRight 1s ease-in-out forwards; 
+  animation: slideFromRight var(--transition-time) ease-in-out forwards; 
 }
 
 @keyframes slideFromRight {
@@ -271,7 +279,7 @@ body{
 }
 
 .slide-to-left { 
-  animation: slideToLeft 1s ease-in-out forwards; 
+  animation: slideToLeft var(--transition-time) ease-in-out forwards; 
 }
 
 @keyframes slideToLeft {
@@ -281,7 +289,7 @@ body{
 
 
 .slide-from-left { 
-  animation: slideFromLeft 1s ease-in-out forwards; 
+  animation: slideFromLeft var(--transition-time) ease-in-out forwards; 
 }
 
 @keyframes slideFromLeft {
@@ -289,7 +297,7 @@ body{
   100% { transform: translateX(-100vw); }
 }
 .slide-to-right { 
-  animation: slideToRight 1s ease-in-out forwards; 
+  animation: slideToRight  var(--transition-time) ease-in-out forwards; 
 }
 
 @keyframes slideToRight {
@@ -312,6 +320,7 @@ body{
 main {
   display: flex;
   overflow: hidden;
+  height: 100%
 }
 
 @media (min-width: 1600px) {
@@ -319,14 +328,20 @@ main {
   .about,
   .tech,
   .projects,
-  .contact, .new-content {
+  .contact{
     align-items: center;
     width: 100vw;
     height: 100%;
   }
+  .about__header {
+    grid-area: header;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
   .about__subsection {
     display: grid;
-    grid-template-areas: "header . work-status" "place position period";
+    grid-template-areas: "header . work-status" "description description description" "place position period";
     grid-template-columns: min-content 1fr 1fr;
     border-bottom: 2px solid var(--light-gray-color);
     padding: 2rem 0;
@@ -336,6 +351,11 @@ main {
   }
   .about__text {
     color: var(--dark-gray-color);
+  }
+  .about {
+    display: grid;
+    grid-template-areas: "header header" "work-experiences education";
+    align-items: baseline;
   }
 
   .header,
@@ -438,6 +458,7 @@ main {
   .tech__text {
     grid-column: 1 / -1;
     font-size: 2rem;
+    text-align: center;
   }
   .about h1,
   .about h2 {
@@ -446,7 +467,7 @@ main {
   .projects {
     display: grid;
     grid-template-areas: "title title title" "text text text" "card card card" "card card card";
-    column-gap: 4.5rem;
+    column-gap: 2rem;
     justify-content: center;
 }
   .projects__card {
